@@ -1895,6 +1895,19 @@ foreach(x in [1,2,3] :
       ))
   }
 
+  @Test def set_to_map() {
+    val q2 = Query.
+      start().
+      updates(MapPropertySetAction(Identifier("n"), ParameterExpression("prop"))).
+      returns()
+
+    testFrom_1_9("start n=node(0) set n = {prop}",
+      Query.
+        start(NodeById("n", 0)).
+        tail(q2).
+        returns(AllIdentifiers()))
+  }
+
   @Ignore("slow test") @Test def multi_thread_parsing() {
     val q = """start root=node(0) return x"""
     val parser = new CypherParser()
